--- a/iTalentBlogProject.Web/Views/Posts/PostDetails.cshtml
+++ b/iTalentBlogProject.Web/Views/Posts/PostDetails.cshtml
@@ -6,21 +6,27 @@
 TML
 <!-- Jumbotron -->
 <div class="jumbotron text-center">
-
     <!-- Title -->
     <h4 class="card-title h4 pb-2"><strong>@Model.Title</strong></h4>
-
     <!-- Card image -->
     <div class="view overlay my-4">
         <img src="/images/@Model.PhotoUrl" class="img-fluid" />
     </div>
-
     <h5 class="indigo-text h5 mb-4">Kategori Adı @Model.Category.Name</h5>
     <h5 class="indigo-text h5 mb-4">Yayınlanma Tarihi: @Model.CreatedDate.Day/@Model.CreatedDate.Month/@Model.CreatedDate.Year</h5>
-
     <p class="card-text">@Model.Article</p>
-
-    
-
 </div>
 
+<h3 class="mt-3 text-center">Yorumlar</h3>
+<div class="list-group my-3">
+    @foreach (var item in Model.Comments)
+    {
+        <div class="list-group-item list-group-item-action" aria-current="true">
+            <i class="fas fa-person"></i>
+            <div class="d-flex w-100 justify-content-between ">
+                <h5 class="mb-1">@item.UserName</h5>
+            </div>
+            <p class="mb-1">@item.Text</p>
+        </div>
+    }
+</div>
