--- a/iTalentBlogProject.Web/Views/Shared/_Layout.cshtml
+++ b/iTalentBlogProject.Web/Views/Shared/_Layout.cshtml
@@ -38,13 +38,13 @@
                     <ul class="navbar-nav d-flex flex-row">
                         <!-- Icons -->
                         <li class="nav-item me-3 me-lg-0">
-                            <a class="nav-link" href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" rel="nofollow"
+                            <a class="nav-link" href="https://github.com/Afevkaya" rel="nofollow"
                                target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </li>
                         <li class="nav-item me-3 me-lg-0">
-                            <a class="nav-link" href="https://www.facebook.com/mdbootstrap" rel="nofollow" target="_blank">
+                            <a class="nav-link" href="https://www.linkedin.com/in/ahmet-faruk-evkaya-227b2b206/" rel="nofollow" target="_blank">
                                 <i class="fab fa-linkedin"></i>
                             </a>
                         </li>
@@ -75,11 +75,11 @@
         <hr class="m-0" />
         <div class="text-center py-4 align-items-center">
             <p>Follow MDB on social media</p>
-            <a href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" class="btn btn-primary m-1" role="button"
+            <a href="https://github.com/Afevkaya" class="btn btn-primary m-1" role="button"
                rel="nofollow" target="_blank">
                 <i class="fab fa-github"></i>
             </a>
-            <a href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" class="btn btn-primary m-1" role="button"
+            <a href="https://www.linkedin.com/in/ahmet-faruk-evkaya-227b2b206/" class="btn btn-primary m-1" role="button"
                rel="nofollow" target="_blank">
                 <i class="fab fa-linkedin"></i>
             </a>
